--- a/roadmap/A2.md
+++ b/roadmap/A2.md
@@ -13,3 +13,4 @@ duel sim:A2
 - Ability to generate unranked tournaments for fun. 
 - Have Tag Team Duels and games with more than 2 players in Free for all mode.
 - Eventually be able to run cards from different games, such as Magic, yes, a terrible idea that would require tons of work.
+*- pause/resume duels (within a reasonable timeframe)
