--- a/roadmap/sprints/A2.md
+++ b/roadmap/sprints/A2.md
@@ -1,26 +1,26 @@
 Sprints
 
 
-2 Get games running
-5 better deck editor/Percy-type search
-4 Enhanced safety controls as an option
-2 more card to card programming
-6 IRC/chat
-Rulings
-Helpdesk
-Modbot
-Senior Staff at IrcOp
-1 management server admin
-1 Preset Deck duels
-1 Image storing service/ screenshots
-3 AI
-6 Tournaments
-3 Format seperation (more attention given to);
-7 Ranking
-2 match mode for tags
-3 Sealed format
-2 Alt card art
-4 Avatars
+- Get games running
+- better deck editor/Percy-type search
+- Enhanced safety controls as an option
+- more card to card programming
+- IRC/chat
+* Rulings
+* Helpdesk
+* Modbot
+* Senior Staff at IrcOp
+- management server admin
+- Preset Deck duels
+- Image storing service/ screenshots
+- AI
+- Tournaments
+- Ranking
+- match mode for tags
+- Format seperation (more attention given to);
+- Sealed format
+- Alt card art
+- Avatars
 
 
 
