--- a/roadmap/A2.md
+++ b/roadmap/A2.md
@@ -7,10 +7,10 @@ duel sim:A2
 - have different restriction lists, between ocg, traditional, advanced.
 - A bot to test decks out against.
 - Ability to undo a card placement or mistake, assuming the opponent did not respond.
-- Cancel a tribute summon before selecting the tributed creatures. 
-- Properly working cards and combinations. 
-- A game with ranked matches, but an option to play unranked. 
-- Ability to generate unranked tournaments for fun. 
+- Cancel a tribute summon before selecting the tributed creatures.
+- Properly working cards and combinations.
+- A game with ranked matches, but an option to play unranked.
+- Ability to generate unranked tournaments for fun.
 - Have Tag Team Duels and games with more than 2 players in Free for all mode.
 - Eventually be able to run cards from different games, such as Magic, yes, a terrible idea that would require tons of work.
-*- pause/resume duels (within a reasonable timeframe)
+- pause/resume duels (within a reasonable timeframe)
